--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "rf-discord-webhook-sender",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "a tool for sending data to discord webhooks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ryanfarber/rf-discord-webhook-sender.git"
   },
-  "author": "",
+  "author": "ryan forever",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ryanfarber/rf-discord-webhook-sender/issues"
