--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rf-discord-webhook-sender",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "a tool for sending data to discord webhooks",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ryanfarber/rf-discord-webhook-sender#readme",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.3.1",
+    "rf-logger": "^3.0.2"
   }
 }
