--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rf-discord-webhook-sender",
+  "name": "@ryanforever/discord-webhook",
   "version": "2.0.0",
   "description": "a tool for sending data to discord webhooks",
   "main": "index.js",
@@ -19,5 +19,10 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "rf-logger": "^3.0.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "discord",
+    "webhook"
+  ]
 }
